--- a/index_zw.html
+++ b/index_zw.html
@@ -62,14 +62,13 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。我还曾担任香港中文大学博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文20余篇，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我曾获得2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括CVPR、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的30多个国际期刊/会议审稿人。
+	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b>教授共同指导。我还曾担任香港中文大学博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如图像分割）和图像处理（如图像超分辨率、图像去噪、图像去雾和医学影像处理）中的应用。我在知名的期刊和会议上已发表论文20余篇，包括 TNNLS、TIP、TMM、TCSVT、PR、ECCV、ICCV、AAAI、ACMMM、IJCAI。我曾获得2021年上海优秀博士毕业生、2021年香港中文大学研究奖学金计划、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。我同时还担任包括CVPR、ICCV、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR、KBS和SPL在内的30多个国际期刊/会议审稿人。
 </p>
 
 <h2>最新消息</h2>
+<!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
-<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
-
-<h3>2018-现在，26篇论文，3篇比赛报告</h3>
+<h3>2018-现在，26篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>一篇论文已被 IEEE TITS接收, 2023.</td></tr> 
@@ -123,7 +122,7 @@
 		<tr><td> 获得<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"阿里巴巴 - 优酷视频增强和超分辨率挑战赛"</a>全国第四名 和 “极客奖”, <b>(4/1514)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"中国多媒体大会 - 去雾挑战赛"</a>全国第三名, 二等奖, <b>(ChinaMM)</b>, 2018.</td></tr>
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"图像去雾挑战赛"</a>全球第六名 和 “荣誉提名奖”, <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
-		<tr><td> 获得 "京东算法挑战赛 - 潜在购买用户预测" 全国第24名, <b>(24/4240)</b>, 2017.</td></tr>
+		<!-- <tr><td> 获得 "京东算法挑战赛 - 潜在购买用户预测" 全国第24名, <b>(24/4240)</b>, 2017.</td></tr> -->
 	</tbody>
 </table>
 
@@ -614,6 +613,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">NTIRE 2023: Stereo Image Super-Resolution Challenge.</a></td>
+		</tr>
+		<tr>
 			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
@@ -634,7 +636,7 @@
 		</tbody>
 </table>
 
-<h3>技术委员会成员 (TPC)</h3>
+<!-- <h3>技术委员会成员 (TPC)</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
@@ -647,7 +649,7 @@
 			<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank">International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</a></td>
 		</tr>
 	</tbody>
-</table>
+</table> -->
 
 <h3>期刊审稿人</h3>
 <table id="tbTeaching" border="0" width="100%">
