--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). He has published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. Meanwhile, I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international journals/conferences, including CVPR, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL.
+	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b> and <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">Faming Fang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image processing). He has published more than 20 papers in top journals and conferences, including TNNLS, TIP, TMM, TCSVT, PR, ECCV, ICCV, AAAI, ACMMM, and IJCAI. Meanwhile, I received several premium awards, including the Outstanding Ph.D. Graduates in Shanghai 2021, CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international journals/conferences, including CVPR, ICCV, TIP, TNNLS, TCYB, TMM, TCSVT, INS, PR, KBS, and SPL.
 </p>
 
 
 <h2>News</h2>
-<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
+<!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
-<h3>2018-Now, 26 Papers, 3 Challenge Reports</h3>
+<h3>2018-Now, 26 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper is accepted by IEEE TITS, 2023.</td></tr> 
@@ -127,7 +127,7 @@
 		<tr><td> The 4th place and "Geek Award" in Alibaba - <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"Youku Video Enhancement and Super Resolution Challenge"</a> <b>(4/1514)</b>, 2019.</td></tr>
 		<tr><td> The 3rd place in China Multimedia - <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"Image Dehazing Challenge"</a>, <b>(ChinaMM)</b>, 2018.</td></tr>
 		<tr><td> The 6th place and "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"Image Dehazing Challenge".</a> <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
-		<tr><td>Ranked 24th in Jingdong Algorithm Challenge - "Potential User Prediction" <b>(24/4240)</b>, 2017.</td></tr>
+		<!-- <tr><td>Ranked 24th in Jingdong Algorithm Challenge - "Potential User Prediction" <b>(24/4240)</b>, 2017.</td></tr> -->
 	</tbody>
 </table>
 
@@ -610,6 +610,9 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">NTIRE 2023: Stereo Image Super-Resolution Challenge.</a></td>
+		</tr>
+		<tr>
 			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
@@ -630,7 +633,7 @@
 		</tbody>
 </table>
 
-<h3>Technical Program Committee Member</h3>
+<!-- <h3>Technical Program Committee Member</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
@@ -643,7 +646,7 @@
 				<td> <a href="https://www.iaria.org/conferences2021/ComICAS21.html", target="_blank">International Conference on Autonomic and Autonomous Systems (ICAS), 2021.</a></td>
 			</tr>
 		</tbody>
-</table>
+</table> -->
 
 <h3>Journal Reviewer</h3>
 <table id="tbTeaching" border="0" width="100%">
