--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
 
 
 <h2>Honors &amp; Awards</h2>
-
-<h3>2016-Present (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>Research Fellowship Scheme, The Chinese University of Hong Kong, 2021.</td></tr> 
@@ -251,7 +249,7 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">Improved version of MSRN. SCI-2.</font><br>
+		<font color="red">SCI-2.</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[Homepage]</a>
@@ -324,7 +322,7 @@
 		<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
-		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, Guixu Zhang
+		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, and Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
 		<font color="red">SCI-1.</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[Paper]</a>
@@ -339,7 +337,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red">【New】</font></a><br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red"></font></a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">SCI-1.</font><br>
@@ -431,7 +429,7 @@
 		<td width="206">
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red">【New】</font></a><br>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red"></font></a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
 		<font color="red">Top artificial intelligence conference.</font><br>
@@ -522,7 +520,7 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【New】</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red"></font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
