--- a/index_zw.html
+++ b/index_zw.html
@@ -105,8 +105,6 @@
 
 
 <h2>荣誉 &amp; 奖项</h2>
-
-<h3>2016-现在 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>研究奖学金资助, 香港中文大学, 2021.</td></tr> 
@@ -157,7 +155,6 @@
 
 
 <h2>基金项目</h2></ul>
-<h3>主持</h3>
 <ul>
 	<li>
 		面向真实场景低质量图像的复原与分割一体化智能模型研究, 上海市启明星（杨帆专项）, 在研, 主持。
@@ -261,7 +258,7 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">MSRN模型的改进版本。SCI-2区。</font><br>
+		<font color="red">SCI-2区。</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[主页]</a>
@@ -279,8 +276,7 @@
 		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
-		<font color="red">作者按字母序排列。</font><br> 
-		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区。</font><br> 
+		<font color="red">该工作在港中文访问期间完成,作者按字母序排列。SCI-1区.</font><br> 
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
         <a href="paper/TIP_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[代码]</a>
@@ -299,8 +295,7 @@
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoisingt</a><br>
 		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng*, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
-		<font color="red">作者按字母序排列。</font><br> 
-		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区。</font><br> 
+		<font color="red">该工作在港中文访问期间完成,作者按字母序排列。SCI-1区.</font><br> 
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
         <a href="paper/TNNLS_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[代码]</a>
@@ -334,7 +329,7 @@
 		<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
-		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, Guixu Zhang
+		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, and Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
 		<font color="red">SCI-1区。</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[论文]</a>
@@ -348,7 +343,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red">【New】</font></a><br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red"></font></a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">SCI-1区。</font><br>
@@ -437,7 +432,7 @@
 		<td width="206">
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red">【New】</font></a><br>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red"></font></a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
 		<font color="red">人工智能顶会.</font><br>
@@ -455,7 +450,7 @@
 		<td width="206">
 		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
+		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red"></font></a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
 		<font color="red">人工智能顶会. 口头报告（Oral Presentation）</font><br>
