--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021--2022</div><br>
 		<a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">Postdoctoral Fellow</a><br>
 		Topic: Image resolution and medical image reconstruction<br>
-		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a><br>
+		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a><br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
