--- a/index_zw.html
+++ b/index_zw.html
@@ -157,16 +157,16 @@
 <h2>基金项目</h2></ul>
 <ul>
 	<li>
-		面向真实场景低质量图像的复原与分割一体化智能模型研究, 上海市启明星（杨帆专项）, 在研, 主持。
+		上海市启明星（杨帆专项）, 2023, 主持。
 	</li>
 	<li>
-		真实场景下的低质量人脸复原及识别研究, 江苏省社会安全图像与视频理解重点实验室, 在研, 主持。
+		江苏省社会安全图像与视频理解重点实验室创新基金, 2022, 主持。
 	</li>
 	<li>
-		基于生成对抗学习的磁共振图像增强模型与算法研究, 国家自然科学基金-国际(地区)合作与交流项目, 在研, 参与。
+		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与。
 	</li>
 	<li>
-		遥感图像快速拼接模型与算法研究, 国家自然科学基金-面上项目, 在研, 参与。
+		国家自然科学基金-面上项目, 2019, 参与。
 	</li>
 </ul>
 
