--- a/index_zw.html
+++ b/index_zw.html
@@ -157,6 +157,9 @@
 <h2>基金项目</h2></ul>
 <ul>
 	<li>
+		上海市自然科学基金面上项目, 2023, 主持。
+	</li>
+	<li>
 		上海市启明星（杨帆专项）, 2023, 主持。
 	</li>
 	<li>
@@ -170,7 +173,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1371] [最高引用: 580] </h2>
+<h2>精选出版物 [总引用: 1377] [最高引用: 581] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
