--- a/index_zw.html
+++ b/index_zw.html
@@ -173,7 +173,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1395] [最高引用: 585] </h2>
+<h2>精选出版物 [总引用: 1401] [最高引用: 585] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
@@ -204,21 +204,6 @@
 		&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
 		<a href="paper/SISR_2021.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[主页]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a><br>
-		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
-		<p><em>arXiv 2204.08696</em>, 2022.<br>
-		<a href="paper/CTCNet.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -367,6 +352,20 @@
 		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
 		<font color="red">SCI-2.</font><br>
 		<a href="paper/ASRN.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a><br>
+		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
+		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
+		<a href="paper/CTCNet.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
