--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <h3>2018-Now, 26 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by IEEE TIP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TITS, 2023.</td></tr> 
 		<tr><td>One paper is accepted by ICASSP, 2023.</td></tr> 
 		<tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr> 
