--- a/index_zw.html
+++ b/index_zw.html
@@ -71,6 +71,7 @@
 <h3>2018-现在，26篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 IEEE TIP接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TITS接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 ICASSP接收, 2023.</td></tr> 
 		<tr><td>一篇论文已被 ACM TOMM接收, 2022.</td></tr> 
