--- a/index.html
+++ b/index.html
@@ -235,7 +235,6 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">SCI-2.</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[Homepage]</a>
@@ -254,7 +253,7 @@
 		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
+		<font color="red">This achievement was completed during the visit of CUHK.</font><br> 
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=SeaNet-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
@@ -274,7 +273,7 @@
 		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng*, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of CUHK. SCI-1.</font><br> 
+		<font color="red">This achievement was completed during the visit of CUHK.</font><br> 
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MLEFGN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
@@ -293,7 +292,6 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang*, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">SCI-1.</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[Code]</a>
 		</td>
@@ -309,8 +307,7 @@
 		</td>		
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
 		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, and Guixu Zhang
-		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">SCI-1.</font><br> 
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -326,7 +323,6 @@
 		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red"></font></a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
-		<font color="red">SCI-1.</font><br>
 		<a href="paper/FBSNet.pdf", target="_blank">[Paper]</a>
 		<a href="https://guangweigao.github.io/TMM22/FBSNet.html", target="_blank">[Homepage]</a>
 		</td>
@@ -342,7 +338,6 @@
 		<td> <a href="paper/ASRN.pdf" target="_blank">Adjustable Super-Resolution Network via Deep Supervised Learning and Progressive Self-Distillation</a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang.
 		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
-		<font color="red">SCI-2.</font><br>
 		<a href="paper/ASRN.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
