--- a/index_zw.html
+++ b/index_zw.html
@@ -466,37 +466,23 @@
 
 
 
-<h4>研讨会论文</h4></table></table>
+<h4>精选研讨会论文</h4></table></table>
 <table id="tbPublications" width="100%">
-    <tr>	
-		<td width="206">
-		<img src="./indexpics/SRRFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang*.
-		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">口头报告(Oral Presentation). Student Travel Award.</font><br>
-		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[论文]</a>
-        <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[海报]</a>
-        <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[报告PPT]</a>
-		<a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[主页]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
 	<tr>	
 		<td width="206">
-		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
-		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang*.
-		<p><em>IInternational Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
-		<font color="red">AIM2019 图像增强挑战赛冠军模型。</font><br> 
-		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[论文]</a>
-        <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[代码]</a>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】</font></a><br>
+		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
+		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
+		<font color="red">NTIRE</font><br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
+		<a href="paper/ESRT.pdf", target="_blank">[论文]</a>
+		<a href="paper/ESRT-supp.pdf", target="_blank">[补充材料]</a>
+		<a href="poster/ESRT.pdf", target="_blank">[海报]</a>
+		<a href="https://github.com/luissen/ESRT", target="_blank">[代码]</a>
+		<a href="projects/ESRT", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -519,21 +505,19 @@
     <tr></tr>
 	<tr></tr>
 
-	<tr>	
+    <tr>	
 		<td width="206">
-		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/SRRFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】</font></a><br>
-		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
-		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
-		<font color="red">NTIRE</font><br>
-		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
-		<a href="paper/ESRT.pdf", target="_blank">[论文]</a>
-		<a href="paper/ESRT-supp.pdf", target="_blank">[补充材料]</a>
-		<a href="poster/ESRT.pdf", target="_blank">[海报]</a>
-		<a href="https://github.com/luissen/ESRT", target="_blank">[代码]</a>
-		<a href="projects/ESRT", target="_blank">[主页]</a>
+		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang*.
+		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<font color="red">口头报告(Oral Presentation). Student Travel Award.</font><br>
+		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[论文]</a>
+        <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[海报]</a>
+        <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[报告PPT]</a>
+		<a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/ICCVW2019_SRRFN", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -542,37 +526,9 @@
 </tbody></table>
 
 
-<h4>比赛报告</h4>
+<h4>精选比赛报告</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">NTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
-		<p><em>CVPR NTIRE</em>, 2018. <br>
-		<font color="red">第六名 及 荣誉提名奖。</font><br>
-        <a href="paper/NTIRE2018.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/AIM2019.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="http://people.ee.ethz.ch/~timofter/publications/Ignatov-ICCVW-2019c.pdf" target="_blank">AIM 2019 Challenge on RAW to RGB Mapping: Methods and Results</a><br>
-		<p><em>ICCV AIM</em>, 2019.<br>
-		<font color="red">第2赛道第1名。第1赛道第2名。</font><br>
-		<a href="paper/AIM2019.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
 
 	<tr>	
 		<td width="206">
@@ -732,14 +688,14 @@
 		<tr>
 			<td> CVF/CCF/CSIG/CAAI会员</td>
 		</tr>
-		<!-- <tr>
+		 <tr>
 			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 发起人</td>
-		</tr> -->
+		</tr> 
 		<tr>
 			<td> 丛林蜂工作室（CLF Studio）创始人</td>
 		</tr>
 	</tbody>
-</table> -->
+</table>  -->
 
 
 <!-- <h2>主题演讲</h2>
