--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				</p>
 
 				<br>
-				<p>
+				<!-- <p>
 					<em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Churchill</em>
-				</p>
+				</p> -->
 
 				<p> 
 					<!-- <a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
@@ -518,7 +518,7 @@
 </tbody></table>
 
 
-<h4>Challenge Reports</h4>
+<h4>Selected Challenge Reports</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -538,35 +538,6 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/AIM2019.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="http://people.ee.ethz.ch/~timofter/publications/Ignatov-ICCVW-2019c.pdf" target="_blank">AIM 2019 Challenge on RAW to RGB Mapping: Methods and Results</a><br>
-		<p><em>ICCV AIM</em>, 2019.<br>
-		<font color="red">The 1st place in track 2. The 2nd place in track 1.</font><br>
-		<a href="paper/AIM2019.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">NTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
-		<p><em>CVPR NTIRE</em>, 2018. <br>
-		<font color="red">The 6th place and Honorable Mention Award.</font><br>
-		<a href="paper/NTIRE2018.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-	<tr></tr>
-	<tr></tr>
-
  </tbody></table>
 
 
