--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				</div>
 
 				<p>
+					Assistant Professor<br>
 					School of Communication & Information Engineering,<br>
 					Shanghai University,<br>
 					Xiangying Building, Baoshan, Shanghai.<br>
