--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					Shanghai University,<br>
 					Xiangying Building, Baoshan, Shanghai.<br>
 					<br>
-					Email: cvjunchengli[at]gmail.com  & junchengli[at]shu.edu.cn  
+					Email: cvjunchengli[at]gmail.com  & junchengli[at]shu.edu.cn<br>
 					<br>
 					<font color="red">I'm always looking for self-motivated students working with me on computer vision, image processing, and medical image analysis. For prospective students, please send me an email with your CV and transcript.</font> 	       
 				</p>
