--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1440] [Highest Citation: 594] </h2>
+<h2>Selected Publications [Total Citations: 1448] [Highest Citation: 595] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
@@ -578,7 +578,7 @@
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023.</a></td>
 			</tr>
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
