--- a/index_zw.html
+++ b/index_zw.html
@@ -175,7 +175,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1440] [最高引用: 594] </h2>
+<h2>精选出版物 [总引用: 1448] [最高引用: 595] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
@@ -583,7 +583,7 @@
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023.</a></td>
 			</tr>
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
