--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 1459] [Highest Citation: 597] </h2>
+<h2>Selected Publications [Total Citations: 1464] [Highest Citation: 599] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h4>Selected Preprint Papers</h4>
@@ -564,13 +564,16 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">NTIRE 2023: Stereo Image Super-Resolution Challenge.</a></td>
+			<td> <a href="https://ericlab.org/acpr2023/workshops/", target="_blank">ACPR 2023 Workshop: Representation Learning for Computer Vision and Pattern Recognition</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">NTIRE 2023: Stereo Image Super-Resolution Challenge</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">IEEE ICME 2021 Special Session "Advanced Representation Learning for Robust Multimedia Image Understanding".</a></td>
+			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge</a></td>
+		</tr>
+		<tr>
+			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">IEEE ICME 2021 Special Session: Advanced Representation Learning for Robust Multimedia Image Understanding</a></td>
 		</tr>
 	</tbody>
 </table>
