--- a/index_zw.html
+++ b/index_zw.html
@@ -176,7 +176,7 @@
 	</li>
 </ul>
 
-<h2>精选出版物 [总引用: 1459] [最高引用: 597] </h2>
+<h2>精选出版物 [总引用: 1464] [最高引用: 599] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h4>精选预印本</h4>
@@ -568,6 +568,9 @@
 <h3>组织者</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
+		<tr>
+			<td> <a href="https://ericlab.org/acpr2023/workshops/", target="_blank">ACPR 2023 Workshop: Representation Learning for Computer Vision and Pattern Recognition</a></td>
+		</tr>
 		<tr>
 			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2023", target="_blank">NTIRE 2023: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
